--- a/Degree regression model/Decision Tree Regression- some.ipynb
+++ b/Degree regression model/Decision Tree Regression- some.ipynb
@@ -155,9 +155,9 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('C:\\\\Users\\\\RS7un\\\\OneDrive\\\\Desktop\\\\Projects\\\\neck device\\\\code\\\\degree regression\\\\tilt_train_crop_some.csv')\n",
+    "df=pd.read_csv('tilt_train_crop_some.csv')\n",
     "print(df)\n",
-    "df_test=pd.read_csv('C:\\\\Users\\\\RS7un\\\\OneDrive\\\\Desktop\\\\Projects\\\\neck device\\\\code\\\\degree regression\\\\tilt_test_crop_some.csv')\n",
+    "df_test=pd.read_csv('tilt_test_crop_some.csv')\n",
     "print(df_test)"
    ]
   },
