--- a/Degree regression model/Multiple Linear Regression- some.ipynb
+++ b/Degree regression model/Multiple Linear Regression- some.ipynb
@@ -177,9 +177,9 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('C:\\\\Users\\\\RS7un\\\\OneDrive\\\\Desktop\\\\Projects\\\\neck device\\\\code\\\\degree regression\\\\tilt_train_crop_some.csv')\n",
+    "df=pd.read_csv('tilt_train_crop_some.csv')\n",
     "print(df)\n",
-    "df_test=pd.read_csv('C:\\\\Users\\\\RS7un\\\\OneDrive\\\\Desktop\\\\Projects\\\\neck device\\\\code\\\\degree regression\\\\tilt_test_crop_some.csv')\n",
+    "df_test=pd.read_csv('tilt_test_crop_some.csv')\n",
     "print(df_test)"
    ]
   },
@@ -1322,22 +1322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c2046665-36f1-46a5-99df-13ab370ab108",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_max' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#normalized\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m y_pred\u001b[38;5;241m=\u001b[39m(y_pred\u001b[38;5;241m*\u001b[39m(train_max \u001b[38;5;241m-\u001b[39m train_min)) \u001b[38;5;241m+\u001b[39m train_min\n\u001b[0;32m      4\u001b[0m Y_test\u001b[38;5;241m=\u001b[39m(Y_test\u001b[38;5;241m*\u001b[39m(train_max \u001b[38;5;241m-\u001b[39m train_min)) \u001b[38;5;241m+\u001b[39m train_min\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_max' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#normalized\n",
     "\n",
